Close IMAP mailbox before deleting it

Some IMAP servers don't allow deleting a currently SELECTed
mailbox, so we close it before DELETEing it.

REVIEW: 112786
BUG: 324932
FIXED-IN: 4.11.3